# SBWT_alphabet

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp  what.cpp
include/: globals.h  sbwt_alphabet.hpp
